# vscode-voice-commanding

./: .gitignore  .prettierrc  .vscodeignore  CMakeLists.txt  README.md  nuget.config  package.json  packages.config  webpack.config.js
src/: command-map.ts  commanding.ts  extension.ts  util.ts
src/lib/: binding.d.ts  native.d.ts  native.js
src/native/: functions.cc  functions.h  main.cc  system.cc  system.h  uv.h  voice_recognizer.cc  voice_recognizer.h
